k8s/apps/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: monitoring

spec:
  ingressClassName: "nginx"
  rules:
    - host: "grafana.walnuts.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-release
                port:
                  number: 80
