k8s/apps/grafana/network-policy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              app.kubernetes.io/component: proxy
              app.kubernetes.io/managed-by: envoy-gateway
              app.kubernetes.io/name: envoy
      ports:
        - port: 3000
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: grafana
              app.kubernetes.io/name: grafana
      ports:
        - port: 9094
          protocol: TCP
        - port: 9094
          protocol: UDP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: grafana
      app.kubernetes.io/name: grafana
  policyTypes:
    - Ingress
